[package]
name = "displayutil"
version = "0.1.0"
authors = ["Ivan Zub <zub.ivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-foundation = "0.6.4"
core-graphics = "0.18.0"

clap = "2.32.0"
dirs = "2.0.2"

serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
